--- a/cal.html
+++ b/cal.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="cal.css">
 </head>
 <body>
+    <h1>Calculator</h1>
     <div id="calculator">
         <input type="text" id="display" readonly>
         <div class="button_container">
